Fix breadcrumbs overlap: correct header height variables
- Update --header-height-mobile from 48px to 28px (actual: 25px + 3px buffer)
- Update --header-height-desktop from 64px to 36px (actual: 33px + 3px buffer)
- Fixes breadcrumbs being overlapped by fixed navigation header
- Calculated based on header padding (12px/16px) + border (1px) + buffer (3px)

--- a/theme.scss
+++ b/theme.scss
@@ -55,8 +55,8 @@
   --space-5: #{$space-5};
   --space-6: #{$space-6};
   --space-7: #{$space-7};
-  --header-height-mobile: 48px;
-  --header-height-desktop: 64px;
+  --header-height-mobile: 28px;
+  --header-height-desktop: 36px;
 }
 
 body {
